terraform/security_group.tf
resource "aws_security_group" "webserver_ssh" {
  name = "webserver-ssh-terraform-sg"
  description = "allow ssh and apache port 80"
#   vpc_id = "vpc-0708a67a"

  #Incoming traffic
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Outgoing traffic
  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
